# sandbox-mkdocs-python

./: README.md  mkdocs.yml  pyproject.toml
LICENSES/: MIT.txt
docs/: .pages  index.md
docs/reference/: SUMMARY.md  index.md
docs/reference/sandbox_mkdocs_python/: index.md
scripts/: gen_ref_pages.py
src/sandbox_mkdocs_python/: __about__.py  __init__.py  __magic__.py  __main__.py  _private.py  calculations.py  module.py  module_pydantic.py
src/sandbox_mkdocs_python/subpkg/: __init__.py  submod.py
