[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox-mkdocs-python"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0 OR MIT"
license-files = { globs = ["LICENSES/*"] }
keywords = []
authors = [
  { name = "Chris Wilson", email = "christopher.david.wilson@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
doc = [
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
]

[project.urls]
Documentation = "https://github.com/cdwilson/sandbox-mkdocs-python#readme"
Issues = "https://github.com/cdwilson/sandbox-mkdocs-python/issues"
Source = "https://github.com/cdwilson/sandbox-mkdocs-python"

[tool.hatch.version]
path = "src/sandbox_mkdocs_python/__about__.py"

[tool.hatch.envs.default]
features = [
  "doc",
]

[tool.hatch.envs.doc]
features = [
  "doc",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/sandbox_mkdocs_python tests}"

[tool.coverage.run]
source_pkgs = ["sandbox_mkdocs_python", "tests"]
branch = true
parallel = true
omit = [
  "src/sandbox_mkdocs_python/__about__.py",
]

[tool.coverage.paths]
sandbox_mkdocs_python = ["src/sandbox_mkdocs_python", "*/sandbox-mkdocs-python/src/sandbox_mkdocs_python"]
tests = ["tests", "*/sandbox-mkdocs-python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
